# rust_os

./: 0_disabling_the_standard_library  Cargo.toml  README.md  steps
disabling_the_standard_library/: 0_disabling_the_standard_library
src/: main.rs
