[package]
name = "rust_os"
version = "0.1.0"
edition = "2018"

# Disable Stack Unwinding and instead abort on panic - BEGIN
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# Disable Stack Unwinding and instead abort on panic - END

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
